crates/ty_python_semantic/resources/mdtest/snapshots/type_ignore.md_-_Suppressing_errors_w…_-_Unused_ignore_commen…_(9c991af56eb6f4e3).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: type_ignore.md - Suppressing errors with `type: ignore` - Unused ignore comment mixed with mypy comments
mdtest path: crates/ty_python_semantic/resources/mdtest/suppressions/type_ignore.md
---

# Python source files

## mdtest_snippet.py

```
1 | # error: [unused-type-ignore-comment] "Unused `type: ignore` directive: 'division-by-zero'"
2 | a = 10 / 2  # type: ignore[mypy-code, ty:division-by-zero]
```

# Diagnostics

```
warning[unused-type-ignore-comment]: Unused `type: ignore` directive: 'division-by-zero'
 --> src/mdtest_snippet.py:2:39
  |
2 | a = 10 / 2  # type: ignore[mypy-code, ty:division-by-zero]
  |                                       ^^^^^^^^^^^^^^^^^^^
  |
help: Remove the unused suppression code
1 | # error: [unused-type-ignore-comment] "Unused `type: ignore` directive: 'division-by-zero'"
  - a = 10 / 2  # type: ignore[mypy-code, ty:division-by-zero]
2 + a = 10 / 2  # type: ignore[mypy-code]

```
